<resources>
    <string name="app_name">Travel Card reader</string>
    <string name="action_settings">Settings</string>


    <string name="dialog_language_title">Choose language</string>
    <string name="icon_settings_title">Settings</string>
    <string name="icon_help_title">Info</string>
    <string name="img_desc">Regular image</string>
    <string name="dialog_help_title">Travel Card reader</string>
    <string name="dialog_help_msg">An easy-to-use app for reading the information of a HSL Travel Card.\n\nDeveloped by Jebstern</string>
    <string name="tv_help_text">Please read the HSL Travel Card to view its information</string>

    <string-array name="languages_array">
        <item>In English</item>
        <item>Svenska</item>
        <item>Suomeksi</item>
    </string-array>


    <string name="z0">Undefined</string>
    <string name="z1">Helsinki</string>
    <string name="z2">Espoo</string>
    <string name="z4">Vantaa</string>
    <string name="z5">Seutu</string>
    <string name="z6">Kirkkonummi</string>
    <string name="z7">Vihti</string>
    <string name="z8">Nurmijärvi</string>
    <string name="z9">Kerava-Sipoo</string>
    <string name="z10">Sipoo</string>
    <string name="z14">Nearby area</string>
    <string name="z15">Whole area</string>

    <string name="v0">Undefined</string>
    <string name="v1">Bussi</string>
    <string name="v5">Tram</string>
    <string name="v6">Metro</string>
    <string name="v7">Train</string>
    <string name="v8">Ferryboat</string>
    <string name="v9">U-line</string>


    <string name="zone">Zone</string>
    <string name="status">Status</string>
    <string name="arrow">&#160;&#8212;></string>
    <string name="hasNotBegun">Has not begun</string>
    <string name="isValid">Is valid</string>
    <string name="noLongerValid">No longer valid</string>
    <string name="periodTrip">Season journey</string>
    <string name="ticket">Ticket</string>
    <string name="pieces">pcs</string>
    <string name="price">Price</string>
    <string name="ticketStatus">Ticket status:&#160;</string>
    <string name="unused">Unused</string>
    <string name="ticketValidity">The ticket is valid from the first use.</string>
    <string name="notStarted">Not started yet \n\n</string>
    <string name="validUntil">Valid:&#160;</string>
    <string name="groupSize">Group size:&#160;</string>
    <string name="validityTime">Validity time:&#160;</string>
    <string name="min">min</string>
    <string name="h">h</string>
    <string name="days">days</string>
    <string name="valid">Valid:\n</string>
    <string name="daysLeft">&#160;days left\n</string>
    <string name="titlePeriod">Season</string>
    <string name="titleWorth">Value</string>
    <string name="titlePast">Past trips</string>
    <string name="ticketWorth">Value on card:&#160;</string>
    <string name="error_dialog_nfc_title">NFC disabled</string>
    <string name="error_dialog_nfc_message">NFC is disabled. Go to settings?</string>
    <string name="error_dialog_nfc_btn_no">CANCEL</string>
    <string name="error_dialog_nfc_btn_yes">YES</string>

</resources>
